src/components/progress/themes/linear/shared/linear.progress.indigo.scss
@use 'styles/utilities' as *;
@use '../light/themes' as *;
@use '../../vars' as *;
@use '../../animations' as *;

$theme: $indigo;
$stripe-size: rem(6px);
$stripe-space: rem(14px);

:host {
    gap: rem(4px);
}

[part~='value'] {
    @include type-style('subtitle-2');
}

[part~='striped']:not([part~='indeterminate']) {
    /* stylelint-disable */
    background: var-get($theme, 'fill-color-default') repeating-linear-gradient(
        45deg,
        var-get($theme, 'fill-color-default'),
        var-get($theme, 'fill-color-default') $stripe-size,
        var-get($theme, 'stripes-color') $stripe-size,
        var-get($theme, 'stripes-color') $stripe-space
    );
    /* stylelint-enable */
}

